# Linear-Algebra-Library

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.cpp
include/: Matrix.h  Quaternion.h  README.md  Vector.h
simulations/flight_dynamics/: DynamicsEquations.h  Integrator.h  README.md  RigidBodyState.h  main.cpp
tests/: test_matrix.cpp  test_quaternion.cpp  test_vector.cpp
